--- a/web/index_template/assets/css/style.css
+++ b/web/index_template/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 strong { font-weight: 500; }
 
 a, a:hover, a:focus {
-	color: #fd625e;
+	color: #19b9e7;
 	text-decoration: none;
     -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
 }
@@ -33,16 +33,16 @@ h3 {
 
 img { max-width: 100%; }
 
-::-moz-selection { background: #fd625e; color: #fff; text-shadow: none; }
-::selection { background: #fd625e; color: #fff; text-shadow: none; }
+::-moz-selection { background: #19b9e7; color: #fff; text-shadow: none; }
+::selection { background: #19b9e7; color: #fff; text-shadow: none; }
 
 
 .btn-link-1 {
 	display: inline-block;
 	height: 50px;
-	margin: 0 5px;
+	margin: 5px;
 	padding: 16px 20px 0 20px;
-	background: #fd625e;
+	background: #19b9e7;
 	font-size: 16px;
     font-weight: 300;
     line-height: 16px;
@@ -51,29 +51,52 @@ img { max-width: 100%; }
 }
 .btn-link-1:hover, .btn-link-1:focus, .btn-link-1:active { outline: 0; opacity: 0.6; color: #fff; }
 
+.btn-link-1.btn-link-1-facebook { background: #4862a3; }
+.btn-link-1.btn-link-1-twitter { background: #55acee; }
+.btn-link-1.btn-link-1-google-plus { background: #dd4b39; }
 
-/***** Content *****/
+.btn-link-1 i {
+	padding-right: 5px;
+	vertical-align: middle;
+	font-size: 20px;
+	line-height: 20px;
+}
+
+.btn-link-2 {
+	display: inline-block;
+	height: 50px;
+	margin: 5px;
+	padding: 15px 20px 0 20px;
+	background: rgba(0, 0, 0, 0.3);
+	border: 1px solid #fff;
+	font-size: 16px;
+    font-weight: 300;
+    line-height: 16px;
+    color: #fff;
+    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+}
+.btn-link-2:hover, .btn-link-2:focus, 
+.btn-link-2:active, .btn-link-2:active:focus { outline: 0; opacity: 0.6; background: rgba(0, 0, 0, 0.3); color: #fff; }
+
+.btn-link-2 i {
+	padding-right: 5px;
+	vertical-align: middle;
+	font-size: 20px;
+	line-height: 20px;
+}
+
+
+/***** Top content *****/
 
 .inner-bg {
-    padding: 120px 0;
+    padding: 60px 0 80px 0;
 }
 
 .top-content .text {
 	color: #fff;
 }
 
-.top-content .logo {
-	display: inline-block;
-	width: 181px;
-	height: 43px;
-	margin: 0 auto;
-	background: url(../img/logo.png) center center no-repeat;
-}
-
-.top-content .text h1 {
-	margin-top: 30px;
-	color: #fff;
-}
+.top-content .text h1 { color: #fff; }
 
 .top-content .description {
 	margin: 20px 0 10px 0;
@@ -87,60 +110,100 @@ img { max-width: 100%; }
 .top-content .description a:hover, 
 .top-content .description a:focus { border-bottom: 1px dotted #fff; }
 
-.top-content .top-big-link {
-	margin-top: 45px;
+.form-box {
+	margin-top: 70px;
 }
 
-
-/***** Modal *****/
-
-.modal-content {
-	background: #3a3a3a;
-	-moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
-	border: 0;
-	text-align: left;
-}
-
-.modal-header {
-	padding: 25px 25px 15px 25px;
-	background: #333;
-	border: 0;
+.form-top {
+	overflow: hidden;
+	padding: 0 25px 15px 25px;
+	background: #444;
+	background: rgba(0, 0, 0, 0.35);
 	-moz-border-radius: 4px 4px 0 0; -webkit-border-radius: 4px 4px 0 0; border-radius: 4px 4px 0 0;
-	color: #888;
-}
-
-.modal-header .close {
-	font-size: 36px;
-	color: #eee;
-	font-weight: 300;
-	text-shadow: none;
-	opacity: 1;
-}
-
-.modal-title {
-	margin-bottom: 10px;
-	line-height: 30px;
-	color: #eee;
-}
-
-.modal-body {
-	padding: 25px 25px 30px 25px;
-	background: #3a3a3a;
 	text-align: left;
+}
+
+.form-top-left {
+	float: left;
+	width: 75%;
+	padding-top: 25px;
+}
+
+.form-top-left h3 { margin-top: 0; color: #fff; }
+.form-top-left p { opacity: 0.8; color: #fff; }
+
+.form-top-right {
+	float: left;
+	width: 25%;
+	padding-top: 5px;
+	font-size: 66px;
+	color: #fff;
+	line-height: 100px;
+	text-align: right;
+	opacity: 0.3;
+}
+
+.form-bottom {
+	padding: 25px 25px 30px 25px;
+	background: #444;
+	background: rgba(0, 0, 0, 0.3);
 	-moz-border-radius: 0 0 4px 4px; -webkit-border-radius: 0 0 4px 4px; border-radius: 0 0 4px 4px;
+	text-align: left;
 }
 
-.modal-body img {
-	margin-bottom: 15px;
-}
-
-.modal-body form textarea {
+.form-bottom form textarea {
 	height: 100px;
 }
 
-.modal-body form .input-error {
-	border-color: #fd625e;
+.form-bottom form button.btn {
+	width: 100%;
 }
+
+.form-bottom form .input-error {
+	border-color: #19b9e7;
+}
+
+.social-login {
+	margin-top: 35px;
+}
+
+.social-login h3 {
+	color: #fff;
+}
+
+.social-login-buttons {
+	margin-top: 25px;
+}
+
+.middle-border {
+	min-height: 300px;
+	margin-top: 170px;
+	border-right: 1px solid #fff;
+	border-right: 1px solid rgba(255, 255, 255, 0.6);
+}
+
+
+/***** Footer *****/
+
+footer {
+	padding-bottom: 70px;
+	color: #fff;
+}
+
+footer .footer-border {
+	width: 200px;
+	margin: 0 auto;
+	padding-bottom: 30px;
+	border-top: 1px solid #fff;
+	border-top: 1px solid rgba(255, 255, 255, 0.6);
+}
+
+footer p { opacity: 0.8; }
+
+footer a {
+	color: #fff;
+}
+footer a:hover, footer a:focus { color: #fff; border-bottom: 1px dotted #fff; }
 
 
 /***** Media queries *****/
@@ -151,9 +214,9 @@ img { max-width: 100%; }
 
 @media (max-width: 767px) {
 	
-	.top-content .top-big-link { margin-top: 25px; }
-	.top-content .top-big-link a.btn { margin-top: 10px; }
-
+	.middle-border { min-height: auto; margin: 65px 30px 0 30px; border-right: 0; 
+						border-top: 1px solid #fff; border-top: 1px solid rgba(255, 255, 255, 0.6); }
+	
 }
 
 @media (max-width: 415px) {
@@ -162,20 +225,3 @@ img { max-width: 100%; }
 
 }
 
-
-/* Retina-ize images/icons */
-
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
-only screen and (     -o-min-device-pixel-ratio: 2/1),
-only screen and (        min-device-pixel-ratio: 2),
-only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx) {
-	
-	/* logo */
-    .top-content .logo {
-    	background-image: url(../img/logo@2x.png) !important; background-repeat: no-repeat !important; background-size: 181px 43px !important;
-    }
-	
-}
