--- a/web/cssImported/uploadJSP.css
+++ b/web/cssImported/uploadJSP.css
@@ -6,14 +6,14 @@ input[type="file"] {
     width: 75%;
     height: 45px;
     line-height: 45px;
-    margin:0px auto; 
+    margin:10% auto 0 auto; 
     display:block;
     font-size: 120%;
     text-align: center;
     padding:0 5px;
 }
 .button-submit{
-    width: 13%;
+    width: 16%;
     margin:7% auto 0 auto; 
     display:block;
 }
@@ -21,4 +21,6 @@ input[type="file"] {
     background: transparent;
     border: none;
 }
-
+.box{
+    height: 300px;
+}
